--- a/课件/2.md
+++ b/课件/2.md
@@ -1,44 +1,97 @@
-# 开源硬件开发环境
+---
+presentation:
+  width: 800
+  height: 600
+---
+
+<!-- slide -->
+
+# 开源硬件演示
 > damo
 > 2020-06-16
 
+<!-- slide -->
 ## 1. 开发演示
 
 ### 认识arduino
 ![](img/arduino0.png)
 
+<!-- slide -->
 ### arduino原理图
 ![](img/arduinoIC.png)
 
+<!-- slide -->
 ### arduino接口图
 ![](img/arduinoIO.png)
 
+<!-- slide -->
 ### 模拟和数字信号
 ![](img/ad_signal.png)
 
+<!-- slide -->
 ### 连接图
 ![](img/arduinoPC.jpg)
 
+<!-- slide -->
 ## 认识arduino开发环境
 
 ### blink
 ![](img/blink.png)
 
+<!-- slide -->
 #### 常见问题处理
 1. 检查代码
 2. 检查端口设置和开发板型号是否匹配
 3. 检查设备管理器
 4. 检查驱动
 
+<!-- slide -->
+
 ### 安装fritzing
 
 1. 画出上述呼吸灯电路图
+![](img/fritzing1.png)
 
-2. 画出跑马灯电路图
-
-3. 实现跑马灯代码
+<!-- slide -->
 
 ## 2. 虚拟环境
 
+https://www.tinkercad.com/
+![](img/tinkercad.png)
+
+<!-- slide -->
+
 1. 实现跑马灯
 
+![](img/ex1.png)
+
+<!-- slide -->
+2. code
+
+```c
+int i=13;
+
+void setup()
+{
+  pinMode(13, OUTPUT);
+  pinMode(12, OUTPUT);
+  pinMode(11, OUTPUT);
+  pinMode(10, OUTPUT);
+  pinMode(9, OUTPUT);
+  pinMode(8, OUTPUT);
+  pinMode(7, OUTPUT);
+}
+
+void loop()
+{
+  for(i=13;i>=7;i--)
+  {
+  	digitalWrite(i, HIGH);
+  	delay(500); // Wait for 1000 millisecond(s)
+  	digitalWrite(i, LOW);
+  	delay(500); // Wait for 1000 millisecond(s)
+  }
+}
+```
+<!-- slide -->
+## thanks
