提交第二次作业 by damo

--- a/课件/2.md
+++ b/课件/2.md
@@ -93,5 +93,13 @@ void loop()
   }
 }
 ```
+
+<!-- slide -->
+
+## 作业
+1. 在昨天创建的github仓库中，增加一个文件夹，命名为"lessons2"
+2. 在文件夹中，增加一张图片，是你设计的流水灯电路图，png格式。
+3. 在文件夹中，增加一个led.c文件，是你的代码。
+4. 将上述修改，提交到github。
 <!-- slide -->
 ## thanks
