--- a/课件/2.md
+++ b/课件/2.md
@@ -1,7 +1,7 @@
 ---
 presentation:
-  width: 800
-  height: 600
+  width: 1024
+  height: 800
 ---
 
 <!-- slide -->
@@ -70,7 +70,6 @@ https://www.tinkercad.com/
 
 ```c
 int i=13;
-
 void setup()
 {
   pinMode(13, OUTPUT);
@@ -81,7 +80,6 @@ void setup()
   pinMode(8, OUTPUT);
   pinMode(7, OUTPUT);
 }
-
 void loop()
 {
   for(i=13;i>=7;i--)
@@ -103,3 +101,6 @@ void loop()
 4. 将上述修改，提交到github。
 <!-- slide -->
 ## thanks
+
+点击如下链接提交github仓库地址
+http://maskhero.mikecrm.com/C3NADN7
