--- a/课件/6.md
+++ b/课件/6.md
@@ -3,6 +3,8 @@
 > damo
 > 2020-06-20
 
+# Liquid Crystal Display
+
 ### 硬件参数
 
 1. 显示容量：16×2个字符
@@ -158,3 +160,8 @@ void loop() {
   }
 }
 ```
+
+## 作业6
+1. 文件夹 lesson6
+2. lcd.png //电路图  lcd.c //代码
+3. lcd.c，实现，通过串口输入内容，写到lcd上。
