--- a/课件/7.md
+++ b/课件/7.md
@@ -1,6 +1,11 @@
+
+
 # 中断和计时器
 
+
 ![](img/interrupt.png)
+
+
 
 ## 重要特征
 
@@ -11,7 +16,7 @@
 - 你可以定义该程序并指定上升沿，下降沿或两者的条件。在这些特定条件下，将处理中断。
 - 每次在输入引脚上发生事件时，都可以自动执行该函数。
 
----
+
 
 ## 示例1：定时器中断
 
@@ -81,28 +86,24 @@ void loop()
 
 ### 附1：attachInterrupt函数介绍
 
-attachInterrupt( digitalPinToInterrupt(pin) , function, mode)
-
-digitalPinToInterrupt(pin) ：取得引脚pin的中断号 
-function：中断发生时调用的函数，此函数必须不带参数和不返回任何值。该函数称为中断服务程序。 
-mode：定义何时发生中断以下四个contstants预定有效值：
-
-LOW 当引脚为低电平时，触发中断
-CHANGE 当引脚电平发生改变时，触发中断
-RISING 当引脚由低电平变为高电平时，触发中断
-FALLING 当引脚由高电平变为低电平时，触发中断.
+- attachInterrupt( digitalPinToInterrupt(pin) , function, mode)
+- digitalPinToInterrupt(pin) ：取得引脚pin的中断号 
+- function：中断发生时调用的函数，此函数必须不带参数和不返回任何值。该函数称为中断服务程序。 
+- mode：定义何时发生中断以下四个contstants预定有效值：
+  - LOW 当引脚为低电平时，触发中断
+  - CHANGE 当引脚电平发生改变时，触发中断
+  - RISING 当引脚由低电平变为高电平时，触发中断
+  - FALLING 当引脚由高电平变为低电平时，触发中断.
 
 ### 附2： 注意事项
 
-> - 在中断服务程序中，不能使用delay()函数和millis()函数。因为他们无法在中断服务程序中正常工作。delayMicroseconds()可以在中断服务程序中正常工作。
-> - 中断服务程序应尽量保持简单短小。否则可能会影响Arduino工作。
-> - 中断服务程序中涉及的变量应声明为volatile类型。
-> - 中断服务程序不能返回任何数值。所以应尽量在中断服务程序中使用全局变量。
+- 在中断服务程序中，不能使用delay()函数和millis()函数。因为他们无法在中断服务程序中正常工作。delayMicroseconds()可以在中断服务程序中正常工作。
+- 中断服务程序应尽量保持简单短小。否则可能会影响Arduino工作。
+- 中断服务程序中涉及的变量应声明为**volatile**类型。
+- 中断服务程序不能返回任何数值。所以应尽量在中断服务程序中使用全局变量。
+
 
 ## 作业
 
 1. 1位7段数码管，每秒数码管数字加1,0-9循环。
 2. 按下按键后，数码管数字清零，重新开始。
-
-> 当堂完成。决定明天大作业的难度。
-
