--- a/课件/8.md
+++ b/课件/8.md
@@ -1,5 +1,138 @@
 # 开源代码
 
+## c plus plus
+
+在c基础上，增加了class，并进行了其他一些优化。
+![](img/dennisRitchie.jpeg)
+![](img/BjarneStroustrup.small)
+
+## 学习资料
+
+[https://www.programiz.com/cpp-programming](https://www.programiz.com/cpp-programming)
+
+```cpp
+class className
+   {
+   // some data
+   // some functions
+   };
+```
+
+```cpp
+class Test
+{
+    private:
+        int data1;
+        float data2;  
+
+    public:  
+        void function1()
+        {   data1 = 2;  } 
+
+        float function2()
+        { 
+            data2 = 3.5;
+            return data2;
+        }
+   };
+```
+
+```cpp
+#include <iostream>
+using namespace std;
+
+class Area
+{
+    private:
+       int length;
+       int breadth;
+
+    public:
+       // Constructor
+       Area(): length(5), breadth(2){ }
+
+       void GetLength()
+       {
+           cout << "Enter length and breadth respectively: ";
+           cin >> length >> breadth;
+       }
+
+       int AreaCalculation() {  return (length * breadth);  }
+
+       void DisplayArea(int temp)
+       {
+           cout << "Area: " << temp;
+       }
+};
+
+int main()
+{
+    Area A1, A2;
+    int temp;
+
+    A1.GetLength();
+    temp = A1.AreaCalculation();
+    A1.DisplayArea(temp);
+
+    cout << endl << "Default Area when value is not taken from user" << endl;
+
+    temp = A2.AreaCalculation();
+    A2.DisplayArea(temp);
+
+    return 0;
+}
+```
+
+```cpp
+// Source Code to demonstrate the working of overloaded constructors
+#include <iostream>
+using namespace std;
+
+class Area
+{
+    private:
+       int length;
+       int breadth;
+
+    public:
+       // Constructor with no arguments
+       Area(): length(5), breadth(2) { }
+
+       // Constructor with two arguments
+       Area(int l, int b): length(l), breadth(b){ }
+
+       void GetLength()
+       {
+           cout << "Enter length and breadth respectively: ";
+           cin >> length >> breadth;
+       }
+
+       int AreaCalculation() {  return length * breadth;  }
+
+       void DisplayArea(int temp)
+       {
+           cout << "Area: " << temp << endl;
+       }
+};
+
+int main()
+{
+    Area A1, A2(2, 1);
+    int temp;
+
+    cout << "Default Area when no argument is passed." << endl;
+    temp = A1.AreaCalculation();
+    A1.DisplayArea(temp);
+
+    cout << "Area when (2,1) is passed as argument." << endl;
+    temp = A2.AreaCalculation();
+    A2.DisplayArea(temp);
+
+    return 0;
+}
+```
+
+
 ## 演示一个库函数的实现。
 
 ## 阅读开源代码
