--- a/课件/1.md
+++ b/课件/1.md
@@ -1,31 +1,52 @@
+---
+presentation:
+  theme: serif.css
+  mouseWheel: true
+  width: 1000
+  height: 900
+---
+<!-- slide -->
+
 # 开源硬件
 > damo
 
+<!-- slide -->
 ## 目录
 
 - 为什么学习开源硬件
 - 如何学习
 - 环境准备
 
+<!-- slide -->
 ## 为什么学开源硬件
 
+<!-- slide -->
 ## 如何学习
 
 - git
 - english
 - share
 
+<!-- slide -->
 ## git
+[git](https://git-scm.com)
+https://git-scm.com
+<!-- slide -->
 ### 版本控制软件
 ### github
-## markdown
-
-## vscode
-
-[git](https://git-scm.com)
 [github](https://github.com/)
+https://github.com/
+<!-- slide -->
+## markdown
 [markdown](https://shd101wyy.github.io/markdown-preview-enhanced/#/)
+[mermaid](https://mermaid-js.github.io/mermaid/#/)
 
+<!-- slide -->
+## vscode
+![vscode](img/vscode.png)
+
+<!-- slide -->
+## 作业
 1. 登录github.com
 2. 申请自己的账户
 3. 创建一个项目仓库
