modify zuoye2 by damo 2021-7-11

--- a/课件/2.md
+++ b/课件/2.md
@@ -8,7 +8,7 @@ presentation:
 <!-- slide -->
 # 开源硬件演示
 > damo
-> 2020-06-16
+> 2021-07-10
 
 <!-- slide -->
 ## 1. 开发演示
@@ -93,8 +93,13 @@ void loop()
 <!-- slide -->
 ## 作业
 1. 在昨天创建的github仓库中，增加一个文件夹，命名为"lessons2"
-2. 在文件夹中，增加一张图片，是你设计的流水灯电路图，png格式。
-3. 在文件夹中，增加一个led.c文件，是你的代码。
+2. 流水灯：
+  2.1 在文件夹中，增加一张图片，是你设计的流水灯电路图，png格式。
+  2.2 在文件夹中，增加一个led.c文件，是你的代码。
+3. 一位数码管：
+  3.1 设计一个电路并完成代码，实现如下功能：能够通过串口输入0-9的数字，显示在数码管上。
+  3.2 将设计的电路图保存在文件夹内
+  3.3 将代码存储为leds_7.c
 4. 将上述修改，提交到github。
 
 <!-- slide -->
