--- a/课件/8.md
+++ b/课件/8.md
@@ -138,5 +138,14 @@ int main()
 ## 阅读开源代码
 
 ## 大作业介绍
-
-- 
+0. 作业描述：
+- 使用CD4511控制两个7位数码管，能够从00-99循环显示，每秒更新一次。
+- 用到2个7位数码管
+- 两个CD4511
+- 用到计时器
+- 通过按键对计数器清零，清零后重新开始计数。
+1. 在仓库中个，创建“zuoye”文件夹。
+2. 将上述原理图存储为png格式
+3. 将上述代码存储为.c格式
+4. 将上述文件夹，更新到github仓库内。
+5. 7月31日前完成。
